--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -28,9 +28,9 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  use_frameworks!
+  use_frameworks! :linkage => :static
   use_modular_headers!
-  pod 'pjsip'
+  # pod 'pjsip'
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   target 'RunnerTests' do
     inherit! :search_paths
@@ -39,6 +39,21 @@ end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
-    flutter_additional_ios_build_settings(target)
+    target.build_configurations.each do |config|
+      flutter_additional_ios_build_settings(target)
+      if target.name == 'flutter_pjsip'
+        config.build_settings['HEADER_SEARCH_PATHS'] = [
+          '$(inherited)',
+          "${PODS_ROOT}/Headers/Public/pjsip",
+          '$(PODS_ROOT)/Headers/Public/pjsip/pjlib/include',
+          '$(PODS_ROOT)/Headers/Public/pjsip/pjlib-util/include',
+          '$(PODS_ROOT)/Headers/Public/pjsip/pjmedia/include',
+          '$(PODS_ROOT)/Headers/Public/pjsip/pjnath/include',
+          '$(PODS_ROOT)/Headers/Public/pjsip/pjsip/include',
+        ]
+        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)']
+        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << 'PJ_AUTOCONF=1'
+      end
+    end
   end
 end
